# SoulFireClient

./: .editorconfig  .eslintignore  .eslintrc.cjs  .gitattributes  .gitignore  .prettierignore  .prettierrc  CLAUDE.md  README.md  SECURITY.md  biome.json  buf.gen.yaml  buf.yaml  com.soulfiremc.SoulFire.yml  com.soulfiremc.soulfire.metainfo.xml  com.soulfiremc.soulfire.yml  components.json  crowdin.yml  eslint.config.js  eslint.config.mjs  fix-demo.ts  generate-proto.ts  index.html  migrate-methods.ts  migrate-round3.ts  migrate.ts  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  rsbuild.config.ts  sf_sign.ps1  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  wrangler.jsonc
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: build.yml  check.yml  crowdin-sync.yml  release.yml  set-server-version.yml  set-version.yml  test.yml
electron/: linux-desktop-entry.test.mjs  main.ts  preload-injection.test.mjs  preload.ts  tray-args.test.mjs  tray-args.ts  updater.ts
electron/native/: app-paths.ts  cast.ts  discord.ts  integrated-server.ts
locales/az-AZ/: admin.json  common.json  instance.json  login.json
locales/cs/: login.json
locales/cs-CZ/: admin.json  common.json  instance.json  login.json
locales/de/: common.json  login.json
locales/de-DE/: admin.json  common.json  instance.json  login.json
locales/en/: admin.json  common.json  login.json
locales/en-PT/: admin.json  common.json  instance.json  login.json
locales/en-UD/: admin.json  common.json  instance.json  login.json
locales/en-US/: admin.json  common.json  instance.json  login.json
locales/es/: common.json  login.json
locales/es-ES/: admin.json  common.json  instance.json  login.json
locales/fi-FI/: admin.json  common.json  instance.json  login.json
locales/fr/: common.json  login.json
locales/fr-FR/: admin.json  common.json  instance.json  login.json
locales/hi-IN/: admin.json  common.json  instance.json  login.json
locales/id-ID/: admin.json  common.json  instance.json  login.json
locales/it-IT/: admin.json  common.json  instance.json  login.json
locales/ja-JP/: admin.json  common.json  instance.json  login.json
locales/ko-KR/: admin.json  common.json  instance.json  login.json
locales/lol/: common.json  login.json
locales/lol-US/: admin.json  common.json  instance.json  login.json
locales/nl-NL/: admin.json  common.json  instance.json  login.json
locales/pl-PL/: admin.json  common.json  instance.json  login.json
locales/pt-BR/: admin.json  common.json  instance.json  login.json
locales/pt-PT/: admin.json  login.json
locales/ru/: common.json  login.json
locales/ru-RU/: admin.json  common.json  instance.json  login.json
locales/sk-SK/: admin.json  common.json  instance.json  login.json
locales/sv-SE/: admin.json  common.json  instance.json  login.json
locales/th-TH/: admin.json  common.json  instance.json  login.json
locales/tr-TR/: admin.json  common.json  instance.json  login.json
locales/uk-UA/: admin.json  common.json  instance.json  login.json
locales/vi-VN/: admin.json  common.json  instance.json  login.json
locales/zh-CN/: admin.json  common.json  instance.json  login.json
locales/zh-TW/: admin.json  common.json  instance.json  login.json
protos/soulfire/: api_docs.proto  automation.proto  bot.proto  bot_live.proto  client.proto  command.proto  common.proto  download.proto  instance.proto  login.proto  logs.proto  mc-auth.proto  metrics.proto  proxy-check.proto  script.proto  server.proto  user.proto
public/: manifest.json
scripts/: generate-icons.sh  generate-legacy-updater-assets.mjs  prepare-electron-release-assets.mjs  refresh-electron-updater-metadata.mjs  sign-windows.js  termux_setup.sh
src/: App.css  app.tsx  demo-data.json  demo-data.ts  env.d.ts  index.css  index.tsx  routeTree.gen.ts  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.microsoftstore.conf.json  tauri.playstore.conf.json  tauri.preview.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  desktop.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: cast.rs  discord.rs  lib.rs  main.rs  rave.rs  sf_loader.rs  sf_version_constant.rs  tray.rs  updater.rs  utils.rs
src/app/: globals.css  layout.tsx  page.tsx  robots.ts
src/components/: about-popup.tsx  app-sidebar.tsx  cast-menu-entry.tsx  client-settings-page.tsx  command-input.tsx  connecting-component.tsx  context-menu-portal.tsx  context-menu-primitives.tsx  controls-menu.tsx  create-instance-popup.tsx  custom-context-menu.tsx  dashboard-menu-header.tsx  data-table-pagination.tsx  data-table-selects.tsx  data-table.tsx  dynamic-icon.tsx  error-component.tsx  external-link.tsx  generic-scripts-page.tsx  global-query-indicator.tsx  import-dialog.tsx  info-buttons.tsx  instance-events.tsx  instance-page-layout.tsx  instance-plugin-info-card.tsx  instance-sidebar.tsx  instance-switcher.tsx  (+19 more)
(+301 files in other folders)
