[package]
name = "soulfire"
version = "1.4.2"
description = "Frontend client for SoulFire."
authors = ["Pistonmaster"]
license = "GPL-3.0"
repository = "https://github.com/AlexProgrammerDE/SoulFireClient"
edition = "2021"
rust-version = "1.60"

[lib]
name = "soulfire_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-rc", features = [ "macos-private-api", "devtools" , "tray-icon"] }
reqwest = { version = "0.12.4", features = ["json"] }
tar = "0.4.40"
flate2 = "1.0.30"
strip-ansi-escapes = "0.2.0"
zip = "2.1.2"
rust_cast = "0.19.0"
mdns-sd = "0.11.1"
log = "0.4.21"
discord-presence = "1.2.0"
tauri-plugin-dialog = "2.0.0-rc"
tauri-plugin-fs = { version = "2.0.0-rc", features = ["watch"] }
tauri-plugin-os = "2.0.0-rc"
tauri-plugin-shell = "2.0.0-rc"
tauri-plugin-clipboard-manager = "2.0.0-alpha.2"
tauri-plugin-process = "2.0.0-rc"
tauri-plugin-log = { version = "2.0.1", features = ["colored"] }
async-std = "1.13.0"
rustls = "0.23.12"
tempfile = "3.6.0"
sha2 = "0.10.8"
openssl = { version = "0.10", features = ["vendored"] }
thiserror = "1.0.63"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2.0.0-rc"
