[package]
name = "soulfire"
version = "1.4.2"
description = "Frontend client for SoulFire."
authors = ["Pistonmaster"]
license = "GPL-3.0"
repository = "https://github.com/AlexProgrammerDE/SoulFireClient"
edition = "2021"
rust-version = "1.60"

[lib]
name = "soulfire_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.6", features = ["macos-private-api", "devtools", "tray-icon"] }
reqwest = { version = "0.12.8", features = ["json"] }
tar = "0.4.42"
flate2 = "1.0.34"
strip-ansi-escapes = "0.2.0"
zip = "2.2.0"
rust_cast = "0.19.0"
mdns-sd = "0.11.5"
log = "0.4.22"
discord-presence = "1.3.1"
tauri-plugin-dialog = "2.0.3"
tauri-plugin-fs = { version = "2.0.3", features = ["watch"] }
tauri-plugin-os = "2.0.1"
tauri-plugin-shell = "2.0.2"
tauri-plugin-clipboard-manager = "2.1.0-beta.7"
tauri-plugin-process = "2.0.1"
tauri-plugin-log = { version = "2.0.1", features = ["colored"] }
async-std = "1.13.0"
rustls = "0.23.15"
sha2 = "0.11.0-pre.4"
thiserror = "1.0.64"
hex = "0.4.3"
regex = "1.11.0"

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-updater = "2.0.2"
tauri-plugin-single-instance = { version = "2.0.1", features = ["semver", "deep-link"] }

[target."cfg(any(target_os = \"android\", target_os = \"ios\"))".dependencies]
openssl = { version = "0.10", features = ["vendored"] }
