[package]
name = "soulfire"
version = "2.5.0"
description = "Frontend client for SoulFire."
authors = ["Pistonmaster"]
license = "AGPL-3.0"
repository = "https://github.com/AlexProgrammerDE/SoulFireClient"
edition = "2024"
rust-version = "1.85"

[lib]
name = "soulfire_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.8.4", features = ["macos-private-api", "devtools", "tray-icon"] }
reqwest = { version = "0.13.0", features = ["json"] }
tar = "0.4.44"
flate2 = "1.1.2"
strip-ansi-escapes = "0.2.1"
zip = "7.0.0"
rust_cast = "0.21.0"
mdns-sd = "0.17.0"
log = "0.4.27"
discord-presence = "3.0.0"
tauri-plugin-dialog = "2.3.3"
tauri-plugin-fs = { version = "2.4.2", features = ["watch"] }
tauri-plugin-os = "2.3.1"
tauri-plugin-shell = "2.3.1"
tauri-plugin-clipboard-manager = "2.3.0"
tauri-plugin-process = "2.3.0"
tauri-plugin-log = { version = "2.6.0", features = ["colored"] }
async-std = "1.13.2"
sha2 = "0.11.0-rc.0"
thiserror = "2.0.16"
hex = "0.4.3"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
tauri-plugin-deep-link = "2"
tauri-plugin-opener = "2"

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-updater = "2.9.0"
tauri-plugin-single-instance = { version = "2.3.3", features = ["semver", "deep-link"] }

#[target."cfg(any(target_os = \"android\", target_os = \"ios\"))".dependencies]
#openssl = { version = "*", features = ["vendored"] }
#aws-lc-sys = { version = "*", features = ["bindgen"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2.4.0"

[profile.dev]
incremental = true
strip = false
lto = false
opt-level = 0

[profile.dev.package."*"]
opt-level = 0
incremental = true

[profile.dev.build-override]
opt-level = 0
incremental = true
